# runlens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  deny.toml  release.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/runlens-bundle/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-bundle/src/: export.rs  import.rs  lib.rs  manifest.rs
crates/runlens-bundle/tests/: round_trip.rs
crates/runlens-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-cli/src/: main.rs  output.rs  paths.rs
crates/runlens-cli/src/commands/: bug_report.rs  compare.rs  export.rs  import.rs  init.rs  investigate.rs  list.rs  mcp.rs  mod.rs  record.rs  redactions.rs  roll.rs  show.rs  verify.rs
crates/runlens-core/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-core/src/: canonical.rs  chain.rs  compare.rs  event_v2.rs  identifier.rs  lib.rs  model.rs  privacy.rs  protocol.rs  signatures.rs
crates/runlens-daemon/: Cargo.toml
crates/runlens-daemon/src/: ipc.rs
crates/runlens-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-mcp/src/: http.rs  lib.rs  main.rs  stdio_mode.rs  tools.rs
crates/runlens-proxy/: Cargo.toml
crates/runlens-recorder/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-recorder/src/: dispatch.rs  env_fingerprint.rs  file_watcher.rs  git.rs  lib.rs  profiler.rs  pty.rs  redaction.rs  session.rs  test_adapters.rs
crates/runlens-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/runlens-storage/src/: lib.rs  migrations.rs  repo.rs  stores.rs
crates/runlens-storage/src/migrations/: 0001_initial.sql
docs/: ARCHITECTURE.md  LIMITATIONS.md  PERFORMANCE.md  THREAT-MODEL.md
extensions/browser-runlens/: content-script.js  devtools.html  popup.html
extensions/godot-runlens/: README.md  RunLens.gd  plugin.cfg
extensions/vscode-runlens/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
extensions/vscode-runlens/src/: extension.ts
extensions/zed-runlens/: settings.json
fixtures/dev-fixture/: bad.sh  good.sh
fixtures/dev-fixture/sample-app/: Cargo.toml
fixtures/dev-fixture/sample-app/src/: lib.rs  main.rs
fixtures/dev-fixture/sample-app/tests/: tests_broken.rs  tests_pass.rs
fixtures/godot-fixture/: godot.sh
