[package]
name = "runlens-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Pure domain logic, canonical serialization, hash chain, signatures, privacy, comparison"

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = "1"
once_cell = "1"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
