[package]
name = "runlens-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Long-running daemon for IPC, subscriptions, and session management"

[lints]
workspace = true

[dependencies]
runlens-storage = { path = "../runlens-storage" }
runlens-core = { path = "../runlens-core" }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "sync", "io-util", "time", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
