[package]
name = "runlens-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Recording collectors: PTY/process, file watcher, git, env, profiler, session orchestration"

[lints]
workspace = true

[dependencies]
runlens-core = { path = "../runlens-core" }
runlens-storage = { path = "../runlens-storage" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
ulid = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
dashmap = "6"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
