[package]
name = "runlens-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "SQLite storage layer, migrations, content-addressed artifact store"

[lints]
workspace = true

[dependencies]
runlens-core = { path = "../runlens-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
